﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Dec 2010, PHP 5.3.4

02 Dec 2010, PHP 5.3.4RC2
- Core:
  . Fixed extract() to do not overwrite $GLOBALS and $this when using
    EXTR_OVERWRITE. (jorto at redhat dot com)
  . Fixed bug #52327 (base64_decode() improper handling of leading padding in
    strict mode). (Ilia)
  . Fixed bug #53304 (quot_print_decode does not handle lower-case hex digits).
    (Ilia, daniel dot mueller at inexio dot net)
  . Fixed bug #47168 (printf of floating point variable prints maximum of 40 
    decimal places). (Ilia)
  . Fixed bug #46587 (mt_rand() does not check that max is greater than min).
    (Ilia)  
  . Fixed #53409 (sleep() returns NULL on Windows). (Pierre)

- cURL extension:
  . Fixed bug #52828 (curl_setopt does not accept persistent streams).
    (Gustavo, Ilia)
  . Fixed bug #52202 (CURLOPT_PRIVATE gets corrupted). (Ilia)
  . Fixed bug #50410 (curl extension slows down PHP on Windows). (Pierre)

- DBA extension:
  . Added Berkeley DB 5.1 support to the DBA extension. (Oracle Corp.)

- DOM extension:
  . Fixed bug #52656 (DOMCdataSection does not work with splitText). (Ilia)

- Hash extension:
  . Fixed bug #51003 (unaligned memory access in ext/hash/hash_tiger.c).
    (Mike, Ilia)

- Iconv extension:
  . Fixed bug #51250 (iconv_mime_decode() does not ignore malformed Q-encoded 
    words). (Ilia)
    
- Intl extension:
  . Fixed crashes on invalid parameters in intl extension. (Stas, Maksymilian
    Arciemowicz)
  . Added support for formatting the timestamp stored in a DateTime object.
    (Stas)

- Phar extension:
  . Fixed bug #50987 (unaligned memory access in phar.c).
    (geissert at debian dot org, Ilia)
   
- Reflection extension:
  . Fixed bug #53366 (Reflection doesnt get dynamic property value from
    getProperty()). (Felipe)